--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Order Form</title>
+</head>
+<body>
+  <h2>Order Form</h2>
+  <form action="/submit" method="POST" enctype="multipart/form-data">
+    <input type="text" name="name" placeholder="Customer Name" required><br>
+    <input type="text" name="phone" placeholder="Phone / WhatsApp" required><br>
+    <input type="text" name="country" placeholder="Country / City"><br>
+    <input type="text" name="product" placeholder="Product Type"><br>
+    <input type="number" name="weight" placeholder="Weight / Quantity"><br>
+    <textarea name="description" placeholder="Additional Details"></textarea><br>
+    <input type="file" name="attachment"><br>
+    <button type="submit">Submit Order</button>
+  </form>
+</body>
+</html>
