--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     </div>
 
     <form id="order-form" action="/submit" method="POST" enctype="multipart/form-data" class="space-y-4">
+      <input type="hidden" name="lang" id="lang" value="en" />
       <div><label id="label-name" class="block">Full Name</label><input name="name" class="w-full border border-gray-300 rounded p-2" required /></div>
       <div><label id="label-phone" class="block">Phone</label><input name="phone" class="w-full border border-gray-300 rounded p-2" required /></div>
       <div><label id="label-country" class="block">Country</label><input name="country" class="w-full border border-gray-300 rounded p-2" required /></div>
@@ -85,6 +86,7 @@ function addProductFields() {
 }
 
 document.getElementById("language").addEventListener("change", e => {
+  document.getElementById("lang").value = e.target.value;
   currentLang = e.target.value;
   if (translations[currentLang]) {
     applyLang(currentLang);
@@ -94,7 +96,7 @@ document.getElementById("language").addEventListener("change", e => {
 });
 
 loadLang("en");
-addProductFields(); // add at least one by default
+window.addEventListener("DOMContentLoaded", () => addProductFields());
 </script>
 </body>
 </html>
