--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     </form>
 
     <div class="text-center mt-6">
-<a href="https://wa.me/971557068949?text=Hello%20Tiragon%20Team%2C%20I%20want%20to%20place%20a%order%20order." target="_blank">
+<a href="https://wa.me/971557068949?text=Hello%20Tiragon%20Team%2C%20I%20want%20to%20place%20an%20order%20order." target="_blank">
   Contact via WhatsApp
 </a>
     </div>
