--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,12 @@
       <button id="submit" type="submit" class="w-full bg-blue-600 text-white py-2 rounded">Submit Order</button>
     </form>
 
+      <a id="whatsapp" href="https://wa.me/971557068949" class="bg-green-500 text-white px-4 py-2 rounded">Contact via WhatsApp</a>
+
+
+    
     <div class="text-center mt-6">
-<a href="https://wa.me/971557068949?text=Hello%20Tiragon%20Team%2C%20I%20want%20to%20place%20an%20order%20order." target="_blank">
+<a href="https://wa.me/971557068949" class="bg-green-500 text-white px-4 py-2 rounded"?text=Hello%20Tiragon%20Team%2C%20I%20want%20to%20place%20an%20order%20order." target="_blank">
   Contact via WhatsApp
 </a>
     </div>
