--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
 <a href="https://wa.me/971557068949" class="bg-green-500 text-white px-4 py-2 rounded"?text=Hello%20Tiragon%20Team%2C%20I%20want%20to%20place%20an%20order%20order." target="_blank">
   Contact via WhatsApp
 </a>
+      <p><a href="http://trt.ae" class="button">Tiragon Trading Homepage  </a></p>
     </div>
   </div>
 
